objects/PerformanceTestResult__c.object
<CustomObject>
    <label>Performance Test Result</label>
    <pluralLabel>Performance Test Results</pluralLabel>
    <nameField>
        <label>Performance Test Result Name</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>ResponseTime__c</fullName>
        <label>Response Time</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Throughput__c</fullName>
        <label>Throughput</label>
        <type>Number</type>
        <precision>18</precision>
        <scale>2</scale>
    </fields>
    <fields>
        <fullName>Scalability__c</fullName>
        <label>Scalability</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>TestScenario__c</fullName>
        <label>Test Scenario</label>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>TestResult__c</fullName>
        <label>Test Result</label>
        <type>Text</type>
        <length>255</length>
    </fields>
</CustomObject>